# shaprai

./: CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_ISSUE_10.md  PR_ISSUE_2_SFT_GENERATOR.md  PR_ISSUE_3_COMPLETE.md  PR_ISSUE_61_BOTTUBE_VIDEO.md  PR_ISSUE_62_CROSS_PLATFORM.md  PR_ISSUE_7.md  PR_ISSUE_8.md  TASK_QUEUE_IMPLEMENTATION.md  pyproject.toml
.github/: dependabot.yml
docs/: CROSS_PLATFORM_DEPLOYMENT.md
shaprai/: cli.py
shaprai/core/: __init__.py  agent_client.py  driftlock.py  lifecycle.py  task_queue.py  template_engine.py
shaprai/integrations/: rustchain.py
shaprai/sanctuary/: LESSON_RUNNER_README.md  lesson_runner.py
shaprai/training/: README.md  dpo_generator.py  sft_generator.py
templates/: cross_platform_agent.yaml  sft_code_reviewer.yaml  sft_community_builder.yaml  sft_technical_educator.yaml  video_creator.yaml
tests/: __init__.py  test_agent_client.py  test_dpo_generator.py  test_driftlock.py  test_driftlock_benchmark.py  test_elyan_bus.py  test_fleet_manager.py  test_lesson_runner.py  test_lifecycle.py  test_lifecycle_integration.py  test_marketplace.py  test_self_governor.py  test_sft_generator.py  test_task_queue.py  test_template_engine.py
